# HAIC-LDP

./: .gitignore  README.md  geo.py  pyproject.toml
raw_data/fase_1/: olist_order_payments_dataset.csv
src/: app.py  pipeline.py  train.py  utils.py
