[project]
name = "haic-ldp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "duckdb>=1.0.0",
    "prefect>=2.19.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0"
]

